# isro-bah-challenge9-shwfs

./: .gitignore  ISRO_CRITERIA_REPORT.md  ISRO_CRITERIA_REPORT_BETTER.md  PHASE2_GUIDE.md  README.md  TRAINING_REPORT.md  centroid_modal.py  confusion.py  isro_criteria_metrics.json  isro_criteria_metrics_better.json  report.py  requirements.txt  shwfs_pipeline.py  train_isro_criteria.py  turbulence_dm.py
.github/workflows/: pages.yml
cpp/: CMakeLists.txt  main.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
tests/: test_integration_assets.py
